package _191220059;

import _191220059.Line.Position;
public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
